fix suspicious data layout bug in recent data page

--- a/static/layouts/recent_data.css
+++ b/static/layouts/recent_data.css
@@ -8,3 +8,7 @@
     color: orangered;
     text-decoration: none;
 }
+
+.suspicious {
+    background-color: rgb(255, 230, 230) !important;
+}
